# SquidKit

./: CMakeLists.txt  README.md  SUMMARY.md  template.sh
docs/: README.md  SquidKit.md  class_alternatives.md
examples/Cache/: cache1_example.cpp  example1.cpp
examples/Config/: IniFileConfig_example.cpp  PropertyFileConfig_example.cpp  XMLConfig_example.cpp  example1.cpp  example2.cpp  example3.cpp  test.properties  test.xml
examples/Core/: enviroment.cpp
examples/Filesystem/: main.cpp
examples/Gui/: widget.cpp
examples/Layout/: main.cpp
include/Application/: Application.h  LoggingSubsystem.h  ServerApplication.h  Subsystem.h
include/Cache/: AbstractCache.h  AbstractStrategy.h  AccessExpirationDecorator.h  AccessExpireCache.h  AccessExpireLRUCache.h  AccessExpireStrategy.h  ExpireCache.h  ExpireLRUCache.h  ExpireStrategy.h  KeyValueArgs.h  LRUCache.h  LRUStrategy.h  StrategyCollection.h  UniqueAccessExpireCache.h  UniqueAccessExpireLRUCache.h  UniqueAccessExpireStrategy.h  UniqueExpireCache.h  UniqueExpireLRUCache.h  UniqueExpireStrategy.h  ValidArgs.h
include/Config/: AbstractConfiguration.h  ConfigurationMapper.h  ConfigurationView.h  FilesystemConfiguration.h  IniFileConfiguration.h  KeyValue.h  LayeredConfiguration.h  LocalConfigurationView.h  LoggingConfigurator.h  MapConfiguration.h  PropertyFileConfiguration.h  SystemConfiguration.h  XMLConfiguration.h
include/Core/: AbstractInstantiator.h  ApplicationException.h  Array.h  Ascii.h  AssertionViolationException.h  AtomicCounter.h  AtomicFlag.h  AutoPtr.h  AutoReleasePool.h  BadCastException.h  BasicFIFOBuffer.h  Buffer.h  Bugcheck.h  BugcheckException.h  ByteOrder.h  CILess.h  Checksum.h  CircularReferenceException.h  CreateFileException.h  DataException.h  DataFormatException.h  Debugger.h  DirectoryNotEmptyException.h  DynamicFactory.h  Environment.h  Error.h  Exception.h  ExistsException.h  FPEnvironment.h  FastMemoryPool.h  FileAccessDeniedException.h  FileException.h  FileExistsException.h  FileNotFoundException.h  FileReadOnlyException.h  Getter.h  IOException.h  IllegalStateException.h  Instantiator.h  InvalidAccessException.h  (+60 more)
include/Crypto/: Cipher.h  CipherImpl.h  CipherKey.h  CipherKeyImpl.h  CryptoIOS.h  CryptoInputStream.h  CryptoOutputStream.h  CryptoStreamBuf.h  CryptoTransform.h  DecryptingInputStream.h  DecryptingOutputStream.h  DigestEngine.h  ECDSADigestEngine.h  ECDSASignature.h  EVPPKey.h  EncryptingInputStream.h  Envelope.h  KeyPairImpl.h  OpenSSLInitializer.h  RSADigestEngine.h  RSAKeyImpl.h  X509Certificate.h
include/Cryptography/: Cipher.h  CipherFactory.h  CipherImpl.h  CipherKey.h  CipherKeyImpl.h  CryptoException.h  CryptoIOS.h  CryptoInputStream.h  CryptoOutputStream.h  CryptoStreamBuf.h  CryptoTransform.h  DecryptingInputStream.h  DecryptingOutputStream.h  DigestEngine.h  ECDSADigestEngine.h  ECDSASignature.h  ECKey.h  ECKeyImpl.h  EVPCipherImpl.h  EVPPKey.h  EncryptingInputStream.h  EncryptingOutputStream.h  Envelope.h  KeyPair.h  KeyPairImpl.h  OpenSSLException.h  OpenSSLInitializer.h  PKCS12Container.h  RSACipherImpl.h  RSADigestEngine.h  RSAKey.h  RSAKeyImpl.h  X509Certificate.h
include/Database/: AbstractBinder.h  AbstractBinding.h  AbstractExtraction.h  AbstractExtractor.h  AbstractPreparation.h  AbstractPreparator.h  AbstractSessionImpl.h  AbstractTypeHandler.h  ArchiveByAgeStrategy.h  ArchiveStrategy.h  Binding.h  BindingException.h  Bulk.h  BulkBinding.h  BulkExtraction.h  Column.h  ConnectionFailedException.h  Connector.h  CopyBinding.h  DataException.h  Date.h  ExecutionException.h  ExtractException.h  Extraction.h  InternalBulkExtraction.h  InternalExtraction.h  JSONRowFormatter.h  LOB.h  LOBIOS.h  LOBInputStream.h  LOBOutputStream.h  LOBStreamBuf.h  LengthExceededException.h  Limit.h  LimitException.h  MetaColumn.h  NoDataException.h  NotConnectedException.h  NotSupportedException.h  PooledSessionHolder.h  (+29 more)
include/DateTime/: Clock.h  DateTime.h  DateTimeFormat.h  DateTimeFormatter.h  DateTimeParser.h  LocalDateTime.h  Stopwatch.h  Timespan.h  Timestamp.h  Timezone.h
include/Encoding/: DoubleByteEncoding.h  MacCentralEurRomanEncoding.h  MacChineseSimpEncoding.h  MacChineseTradEncoding.h  MacCyrillicEncoding.h  MacJapaneseEncoding.h  MacKoreanEncoding.h  MacRomanEncoding.h  Mapping.h  Windows1253Encoding.h  Windows1254Encoding.h  Windows1255Encoding.h  Windows1256Encoding.h  Windows1257Encoding.h  Windows1258Encoding.h  Windows874Encoding.h  Windows932Encoding.h  Windows936Encoding.h  Windows949Encoding.h  Windows950Encoding.h
include/Events/: AbstractDelegate.h  AbstractEvent.h  AbstractPriorityDelegate.h  BasicEvent.h  DefaultStrategy.h  Delegate.h  EventArgs.h  ExpirationDecorator.h  Expire.h  FIFOEvent.h  FIFOStrategy.h  FunctionDelegate.h  FunctionPriorityDelegate.h  NotificationStrategy.h  PriorityDelegate.h  PriorityEvent.h  PriorityExpire.h  PriorityStrategy.h
include/Filesystem/: ChildrenFirstTraverse.h  DirectoryEvent.h  DirectoryIterator.h  DirectoryWatcher.h  File.h  Glob.h  Path.h  RecursiveDirectoryIterator.h  RecursiveDirectoryIteratorImpl.h  SiblingsFirstTraverse.h  SortedDirectoryIterator.h  TemporaryFile.h  TraverseBase.h
include/Graphics2D/: AutoCanvasRestore.h  Bitmap.h  BlendMode.h  Canvas.h  Color.h  Font.h  IPoint.h  IRect.h  Image.h  ImageInfo.h  Matrix.h  Paint.h  Path.h  Picture.h  Pixmap.h  Point.h  RRect.h  Rect.h  Region.h  Surface.h  TextBlob.h  TextBlobBuilder.h
include/Graphics3D/: Camera.h  ComputeBounds.h  EllipsoidModel.h  EllipsoidPerspective.h  LookAt.h  Node.h  ProjectionMatrix.h  ViewportState.h
include/Hashing/: ConstIterator.h  Hash.h  HashEntry.h  HashFunction.h  HashMap.h  HashMapEntry.h  HashMapEntryHash.h  HashSet.h  HashStatistic.h  HashTable.h  Iterator.h  LinearHashTable.h  SimpleHashTable.h
include/Logging/: ArchiveByNumberStrategy.h  ArchiveByTimestampStrategy.h  ArchiveStrategy.h  AsyncChannel.h  Channel.h  ColorConsoleChannel.h  Configurable.h  ConsoleChannel.h  EventChannel.h  EventLogChannel.h  FileChannel.h  Formatter.h  FormattingChannel.h  LogFile.h  LogIOS.h  LogStream.h  LogStreamBuf.h  (+19 more)
(+748 files in other folders)
